Finished first recipe page
Added description, ingredients and steps to the page.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <p>Try out our <a href="recipes/pizza.html" target="_blank" rel="noopener noreferrer">delicous pizza</a> recipe! </p>
+        <p>Try out our <a href="recipes/pizza.html" target="_blank" rel="noopener noreferrer">pizza</a> recipe! </p>
     </body>
 </html>
