--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,5 +7,29 @@
 
     <body>
         <h1>Original American Pizza</h1>
+        <img src="https://www.allrecipes.com/thmb/9xS4RiNv9xNlLaLk7p28qAeM-VE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/46595-amazing-whole-wheat-pizza-crust-DDMFS-4x3-79e5d462f27646ffa48df5512986019b.jpg" alt="a delicious pizza">
+        <h2>Description:</h2>
+        <p>This whole wheat pizza dough recipe bakes up into an amazing crust that's crisp on the outside and soft and chewy on the inside. Use with your favorite pizza toppings or pizza recipe.</p>
+        <h2>Ingredients:</h2>
+        <ul>
+            <li>1 ½ cups warm water (110 degrees F/45 degrees C)</li>
+            <li>1 teaspoon white sugar</li>
+            <li>1 tablespoon active dry yeast</li>
+            <li>1 tablespoon olive oil</li>
+            <li>1 teaspoon salt</li>
+            <li>2 cups whole wheat flour</li>
+            <li>1 ½ cups all-purpose flour</li>
+        </ul>
+        <h2>Steps:</h2>
+        <ol>
+            <li>Pour warm water into a large bowl; stir in sugar to dissolve. Sprinkle yeast on top and let stand until foamy, about 10 minutes.</li>
+            <li>Stir olive oil and salt into yeast mixture; mix in whole wheat flour and 1 cup all-purpose flour until dough starts to come together. </li>
+            <li>Turn dough out onto a surface floured with remaining all-purpose flour; knead until all of the flour has been absorbed and dough becomes smooth, about 10 minutes. </li>
+            <li>Place dough in an oiled bowl and turn to coat the surface. Cover loosely with a towel; let stand in a warm place until doubled in size, about 1 hour. </li>
+            <li>Turn dough out onto a lightly floured surface; divide into 2 pieces for 2 thin crusts, or leave whole to make one thick crust. </li>
+            <li>Form dough into a tight ball; place dough back into an oiled bowl and turn to coat the surface. Cover loosely with a towel; let stand in a warm place until doubled in size, about 45 minutes. </li>
+            <li>Grease a large pizza pan. Roll a ball of dough with a rolling pin until it will not stretch any further. Then, drape it over both of your fists, and gently pull the edges outward, while rotating crust. When the circle has reached the desired size, place on the prepared pizza pan. </li>
+            <li>Bake with sauce, cheese and toppings.</li>
+        </ol>
     </body>
 </html>
