--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <p>Try out our <a href="recipes/pizza.html" target="_blank" rel="noopener noreferrer">pizza</a> recipe! </p>
+        <p>Try out some of our recipes:</p>
+        <ul>
+            <li><a href="recipes/pizza.html" target="_blank" rel="noopener noreferrer">Pizza</a></li>
+            <li><a href="recipes/pasta.html" target="_blank" rel="noopener noreferrer">Pasta</a></li>
+            <li><a href="recipes/grilled-chicken.html" target="_blank" rel="noopener noreferrer">Grilled Chicken</a></li>
+        </ul> 
     </body>
 </html>
