link style.css to the other pages and gave their h1 elements same class as index.html

--- a/recipes/grilled-chicken.html
+++ b/recipes/grilled-chicken.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Majestic Grilled Chicken!</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Our Special Grilled Chicken</h1>
+        <h1 class="title">Our Special Grilled Chicken</h1>
         <img src="https://www.allrecipes.com/thmb/eYDrwQSUBEm30-aOVNodcFjlvdA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/241890-grilled-chicken-marinade-DDMFS-4x3-93bf452481e645808c72f13349340582.jpg" alt="multiple yummy pieces of freshly grilled chicken">
         <h2>Description:</h2>
         <p>This grilled chicken marinade is the best! It is so flavorful and so simple to prep with easy pantry ingredients. Perfect for any occasion.</p>
