--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Tasty Pasta!</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Our Unique Pasta</h1>
+        <h1 class="title">Our Unique Pasta</h1>
         <img src="https://www.allrecipes.com/thmb/01ndQcIFdRo8VwJp7yYpi4PbJAc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4064575-pasta-fazool-pasta-e-fagioli-Chef-John-1x1-1-3b09444d9d99494181825cda657f3d0f.jpg" alt="a tasty pasta dish">
         <h2>Description:</h2>
         <p>Pasta fazool is a classic Italian-American comfort food. This recipe works with any sausage, but I like the fennel and anise flavors of sweet Italian sausage with the beans. A hearty soup that's fast and easy to put together. This recipe makes enough for two large portions or four smaller ones.</p>
