--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Delicious Pizza!</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Original American Pizza</h1>
+        <h1 class="title">Original American Pizza</h1>
         <img src="https://www.allrecipes.com/thmb/9xS4RiNv9xNlLaLk7p28qAeM-VE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/46595-amazing-whole-wheat-pizza-crust-DDMFS-4x3-79e5d462f27646ffa48df5512986019b.jpg" alt="a delicious pizza">
         <h2>Description:</h2>
         <p>This whole wheat pizza dough recipe bakes up into an amazing crust that's crisp on the outside and soft and chewy on the inside. Use with your favorite pizza toppings or pizza recipe.</p>
@@ -20,7 +21,7 @@
             <li>2 cups whole wheat flour</li>
             <li>1 ½ cups all-purpose flour</li>
         </ul>
-        <h2>Steps:</h2>
+        <h2>Steps</h2>
         <ol>
             <li>Pour warm water into a large bowl; stir in sugar to dissolve. Sprinkle yeast on top and let stand until foamy, about 10 minutes.</li>
             <li>Stir olive oil and salt into yeast mixture; mix in whole wheat flour and 1 cup all-purpose flour until dough starts to come together. </li>
